[gd_scene load_steps=12 format=3 uid="uid://dt37ijplfqjd5"]

[ext_resource type="Script" uid="uid://ci0rwta3e0stg" path="res://scenes/ui/board/summary_view.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://4ccwqkvp01tf" path="res://assets/gui/menu/backgrounds/sub_panel.png" id="2_hv8eb"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="3_skfsh"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="4_oq1or"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="5_i1my1"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="6_ywpir"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="7_xhx12"]
[ext_resource type="Texture2D" uid="uid://csq1hhm0xchio" path="res://assets/gui/menu/buttons/buttonLarge_brown.png" id="8_3uggk"]
[ext_resource type="Texture2D" uid="uid://nove6ni5alhn" path="res://assets/gui/menu/buttons/buttonLarge_brown_pressed.png" id="9_hc17l"]
[ext_resource type="Texture2D" uid="uid://5jm4o80mt8a2" path="res://assets/gui/menu/buttons/buttonLarge_brown_hover.png" id="10_bfbv2"]
[ext_resource type="PackedScene" uid="uid://b5i31jke8jkj1" path="res://scenes/ui/board/summary_view_points.tscn" id="11_qqxbb"]

[node name="summary_view" type="Node2D"]
script = ExtResource("1")

[node name="background" type="NinePatchRect" parent="."]
offset_left = -400.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = 50.0
texture = ExtResource("2_hv8eb")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="mission_complete" type="Label" parent="background"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource("3_skfsh")
theme_override_font_sizes/font_size = 30
text = "TR_MISS_COMP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mission_failed" type="Label" parent="background"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource("3_skfsh")
theme_override_font_sizes/font_size = 30
text = "TR_MISS_FAIL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="blue_wins" type="Label" parent="background"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource("3_skfsh")
theme_override_font_sizes/font_size = 30
text = "TR_SAP_DAWN_WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="red_wins" type="Label" parent="background"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource("3_skfsh")
theme_override_font_sizes/font_size = 30
text = "TR_RUBY_DUSK_WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="yellow_wins" type="Label" parent="background"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource("3_skfsh")
theme_override_font_sizes/font_size = 30
text = "TR_AMBER_NOON_WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="green_wins" type="Label" parent="background"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource("3_skfsh")
theme_override_font_sizes/font_size = 30
text = "TR_JADE_TWI_WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="black_wins" type="Label" parent="background"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource("3_skfsh")
theme_override_font_sizes/font_size = 30
text = "TR_OBS_NIGHT_WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="game_draw" type="Label" parent="background"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource("3_skfsh")
theme_override_font_sizes/font_size = 30
text = "TR_GAME_DRAW"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu_button" type="TextureButton" parent="."]
offset_left = -400.0
offset_top = 60.0
offset_right = -210.0
offset_bottom = 100.0
texture_normal = ExtResource("4_oq1or")
texture_pressed = ExtResource("5_i1my1")
texture_hover = ExtResource("6_ywpir")
texture_focused = ExtResource("6_ywpir")

[node name="label" type="Label" parent="menu_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_xhx12")
text = "TR_MAIN_MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="restart_button" type="TextureButton" parent="."]
offset_left = 210.0
offset_top = 60.0
offset_right = 400.0
offset_bottom = 100.0
texture_normal = ExtResource("4_oq1or")
texture_pressed = ExtResource("5_i1my1")
texture_hover = ExtResource("6_ywpir")
texture_focused = ExtResource("6_ywpir")

[node name="label" type="Label" parent="restart_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_xhx12")
text = "TR_RESTART"
horizontal_alignment = 1
vertical_alignment = 1

[node name="next_mission_button" type="TextureButton" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 160.0
texture_normal = ExtResource("8_3uggk")
texture_pressed = ExtResource("9_hc17l")
texture_hover = ExtResource("10_bfbv2")
texture_focused = ExtResource("10_bfbv2")

[node name="label" type="Label" parent="next_mission_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_xhx12")
theme_override_font_sizes/font_size = 30
text = "TR_NEXT_MISS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="points" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1020, 200)
offset_left = -510.0
offset_top = -250.0
offset_right = 510.0
offset_bottom = -50.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="points"]
layout_mode = 2

[node name="SummaryViewPoints0" parent="points/HBoxContainer" instance=ExtResource("11_qqxbb")]
layout_mode = 2

[node name="SummaryViewPoints1" parent="points/HBoxContainer" instance=ExtResource("11_qqxbb")]
layout_mode = 2

[node name="SummaryViewPoints2" parent="points/HBoxContainer" instance=ExtResource("11_qqxbb")]
layout_mode = 2

[node name="SummaryViewPoints3" parent="points/HBoxContainer" instance=ExtResource("11_qqxbb")]
layout_mode = 2

[node name="SummaryViewPoints4" parent="points/HBoxContainer" instance=ExtResource("11_qqxbb")]
layout_mode = 2

[connection signal="pressed" from="menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="next_mission_button" to="." method="_on_next_mission_button_pressed"]
